tests/fixtures/errors/invalid_include_url.puml
@startuml
!include https://example.com/sequence.puml
@enduml
